--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <DOCTYPE html>
-<html>
-	<head>
-		<title>TRACE</title>
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-			<img class="img1" src="img/IMG_20211222_135741.JPG">
-		<div class="login">
-			<label name="fname">Username:</label><br>
-			<input type="text" id="username1" name="fname"><br>
-			<br>
-			<label name="fname">Password:</label><br>
-			<input type="number" id="password1" name="fname"><br>
-			<br><br>
-			<button class="btn">Submit</button>
-		</div>
-	</body>
+<html lang="eng">
+  <head>
+    <title>TRACE</title>
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <img class="img1" src="img/IMG_20211222_135741.JPG">
+    <div class="login">
+      <label name="fname">Username:</label><br>
+      <input type="text" id="username1" name="fname"><br><br>
+      <label name="fname">Password:</label><br>
+      <input type="number" id="password1" name="fname"><br><br><br>
+      <button class="btn">Submit</button>
+    </div>
+  </body>
 </html>
