--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
-<DOCTYPE html>
-<html lang="eng">
-  <head>
-    <title>TRACE</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-    <img class="img1" src="img/IMG_20211222_135741.JPG">
-    <div class="login">
-      <label name="fname">Username:</label><br>
-      <input type="text" id="username1" name="fname"><br><br>
-      <label name="fname">Password:</label><br>
-      <input type="number" id="password1" name="fname"><br><br><br>
-      <button class="btn">Submit</button>
-    </div>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+	<section>
+		<div class="color"></div>
+		<div class="color"></div>
+		<div class="color"></div>
+		<div class="box">
+			<div class="square" style="--i:0;"></div>
+			<div class="square" style="--i:1;"></div>
+			<div class="square" style="--i:2;"></div>
+			<div class="square" style="--i:3;"></div>
+			<div class="square" style="--i:4;"></div>
+
+
+			<div class="container">
+				<div class="form">
+					<h2>login form</h2>
+					<form>
+						<div class="inputbox">
+							<input type="text" placeholder="username">
+						</div>
+						<div class="inputbox">
+							<input type="password" placeholder="password">
+						</div>
+						<div class="inputbox">
+							<input type="submit" placeholder="login">
+						</div>
+						<p class="forget">forget password ?<a href="#">click hear</a></p>
+						<p class="forget">don't have an account ?
+							<a href="#">sign up</a></p>
+
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+</body>
 </html>
+
