logged page added and added logo in login page

--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="login-div">
-        <div class="logo"></div>
+        <div class="logo"><img src="logo.jpg" alt="logo" class="logo"></div>
         <div class="title">Trace</div>
         <div class="sub-title">Login to the world of hacking!</div>
         <div class="fields">
