--- a/loginPage/index.html
+++ b/loginPage/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <button class="signin-button">Login</button>
-        <h4>Made with Love by:    Suman Kumar ~BHUTUU</h4>
+        <h4>Made with Love by: BHUTUU and Abij1234</h4>
     </div>
 </body>
 </html>
