--- a/assets/send/send.html
+++ b/assets/send/send.html
@@ -5,29 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Locate</title>
   <link rel="stylesheet" href="style.css">
+  <script src="js/jquery3.3.1-jquery.min.js"></script>
+  <script src="js/particles2.0.0-particles.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/location.js"></script>
+  <script src="js/info.js"></script>
+  <script src="js/warpspeed.min.js"></script>
 </head>
 <body>
   <div class="container">
     <div class="ball">
       <h3>ON</h3>
       <p id="demo"></p>
-      <button onClick="getLocation()">run it</button>
+      <div><button id="change" class="button" type="button" onclick="main()">Continue</button></div>
+      <div class="text" id="result"></div>
     </div>
   </div>
-  <script>
-    var x = document.getElementById("demo");
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
-      } else {
-        x.innerHTML = "Geolocation is not supported by this browser.";
-      }
-    }
-    function showPosition(position) {
-      x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude;
-      //$.post("post.php", {lat: position.coords.latitude, lng: position.coords.longitude});
-      saveAs(x.innerHTML, "static.txt");
-    }
-  </script>
 </body>
 </html>
