--- a/assets/index.html
+++ b/assets/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="login-div">
-        <div class="logo"><img src="logo.jpg" alt="logo" class="logo"></div>
+        <div class="logo"><img src="img/logo.jpg" alt="logo" class="logo"></div>
         <div class="title">Trace</div>
         <div class="sub-title">Login to the world of hacking!</div>
         <div class="fields">
