--- a/assets/server.html
+++ b/assets/server.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glassmorphism Battery</title>
+    <title>TRACE login panel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="server.css">
+    <link rel="stylesheet" href="css/server.css">
 </head>
 <body>
     <header>
