Tweaked admin panel page source

--- a/assets/serverDummy.html
+++ b/assets/serverDummy.html
@@ -12,10 +12,10 @@
     <header>
         <p id="uname">TRACE LOGIN PANEL::username</p>
         <ul>
-            <li><a href="." class="active">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">HELP</a></li>
-            <li><a href="#">Log out</a></li>
+            <li><a href="" class="active">HOME</a></li>
+            <li><a href="About.html">ABOUT</a></li>
+            <li><a href="help.html">HELP</a></li>
+            <li><a href="http://127.0.0.1:8080">Log out</a></li>
         </ul>
     </header>
     <section class="sec">
@@ -23,7 +23,10 @@
         <div class="box">
             <div class="content">
                 <h3>TRACE</h3>
-                <div class="percent">SENDING LINK: <p>€BHUTUULINK</p></div>
+                <div class="percent"><p1 class="linkHead"><<<====SENDING LINK=====>>></p1><br></div><br>
+                <div class=" percent2">
+                <p class="linkTail">€BHUTUULINK</p>
+                </div>
             </div>
         </div>
     </section>
